--- a/TreeModelView/CMakeLists.txt
+++ b/TreeModelView/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.5)
+﻿cmake_minimum_required(VERSION 3.5)
 
 project(TreeModelView LANGUAGES CXX)
 
@@ -8,36 +8,25 @@ set(CMAKE_AUTOUIC ON)
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 
-set(CMAKE_CXX_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# QtCreator supports the following variables for Android, which are identical to qmake Android variables.
-# Check http://doc.qt.io/qt-5/deployment-android.html for more information.
-# They need to be set before the find_package(Qt5 ...) call.
+find_package(Qt5 COMPONENTS Widgets Core REQUIRED)
+include_directories(Headers/)
 
-#if(ANDROID)
-#    set(ANDROID_PACKAGE_SOURCE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/android")
-#    if (ANDROID_ABI STREQUAL "armeabi-v7a")
-#        set(ANDROID_EXTRA_LIBS
-#            ${CMAKE_CURRENT_SOURCE_DIR}/path/to/libcrypto.so
-#            ${CMAKE_CURRENT_SOURCE_DIR}/path/to/libssl.so)
-#    endif()
-#endif()
-
-find_package(Qt5 COMPONENTS Widgets REQUIRED)
-
-if(ANDROID)
-  add_library(TreeModelView SHARED
-    main.cpp
-    mainwindow.cpp
-    mainwindow.h
+file(GLOB HEADER
+      "Headers/*.h"
+)
+file(GLOB SOURCE
+  "Sources/*.cpp"
   )
-else()
-  add_executable(TreeModelView
-    main.cpp
-    mainwindow.cpp
-    mainwindow.h
-  )
-endif()
 
-target_link_libraries(TreeModelView PRIVATE Qt5::Widgets)
+    add_executable(TreeModelView ${HEADER}
+     ${SOURCE}
+    )
+  target_include_directories(TreeModelView
+      PRIVATE
+          ${PROJECT_SOURCE_DIR}/Header
+  )
+
+  target_link_libraries(TreeModelView PUBLIC Qt5::Widgets Qt5::Core)
